--- a/css/slotbingo.css
+++ b/css/slotbingo.css
@@ -10,8 +10,7 @@ body {
 	font-family: arial, helvetica, sans-serif;
 	overflow: hidden;
 	width: 100px;
-	height: 100px;
-	border: 1px solid black;
+	height: 130px;
 	float: left;
 }
 
@@ -27,16 +26,52 @@ body {
 }
 
 .already_num{
-	font-size:20px;
-	width:75px;
-	height:70px;
-	margin-left:15px;
-	margin-top:10px;
-	padding-top:5px;
-	float:left;
-	font-size:55px;
-	line-height:55px;
-	text-align:center;
-	border:black 3px solid;
-	border-radius:30px;
+	width  :80px;
+	height :80px;
+	margin :10px;
+	float  :left;
+	color  :black;
+	font-size    : 55px;
+	border-radius: 100px;
+	text-align   : center;
+}
+
+.number_red{
+	background-color:red;
+}
+
+.number_blue{
+	background-color:skyblue;
+}
+
+.number_green{
+	background-color:green;
+}
+
+.number_yellow{
+	background-color:yellow;
+}
+
+.number_violet{
+	background-color:violet;
+}
+
+.title{
+	font-size   : 80px;
+	font-weight : bold;
+	text-align  : center;
+}
+
+.logo_left{
+	height: 100px;
+	width : 100px;
+	margin: 20px;
+	float : left;
+}
+
+.logo_right{
+	height: 100px;
+	width : 100px;
+	margin: 20px;
+	float : right;
 }
