--- a/css/slotbingo.css
+++ b/css/slotbingo.css
@@ -1,28 +1,22 @@
-body {
-	background-color: white;
-	padding: 0px;
-	margin: 0px;
-	font-size: 12px;
+#num-display {
+	margin: 0 auto;
+	width: 800px;
 }
 
 .slots {
-	font-size: 100px;
+	font-size: 400px;
+	line-height: normal; 
 	font-family: arial, helvetica, sans-serif;
 	overflow: hidden;
-	width: 100px;
-	height: 100px;
+	width: 400px;
+	height: 400px;
 	border: 1px solid black;
 	float: left;
 }
 
-.slots .wrapper {
-	margin-top: 3px;
-	width: 100px;
-}
-
 .slots .slot {
-	width: 100px;
-	height: 100px;
+	width: 400px;
+	height: 400px;
 	text-align: center;
 }
 
