--- a/css/slotbingo.css
+++ b/css/slotbingo.css
@@ -5,24 +5,36 @@ body {
 	font-size: 12px;
 }
 
+#num-display {
+	margin: 0 auto;
+	width: 600px;
+}
+
 .slots {
-	font-size: 100px;
+	font-size: 300px;
+	line-height: normal; 
 	font-family: arial, helvetica, sans-serif;
 	overflow: hidden;
-	width: 100px;
-	height: 130px;
+	width: 300px;
+	height: 300px;
 	float: left;
 }
 
 .slots .wrapper {
-	margin-top: 3px;
-	width: 100px;
+	width: 300px;
 }
 
 .slots .slot {
-	width: 100px;
-	height: 100px;
+	width: 300px;
+	height: 300px;
 	text-align: center;
+}
+
+.btn{
+	margin-top: 20px;
+	width:200px;
+	height:90px;
+	font-size:40px;
 }
 
 .already_num{
