--- a/css/slotbingo.css
+++ b/css/slotbingo.css
@@ -69,8 +69,8 @@ body {
 	background-color:green;
 }
 
-.number_yellow{
-	background-color:yellow;
+.number_orange{
+	background-color:orange;
 }
 
 .number_violet{
